[tool.poetry]
name = "ksink"
version = "0.1.0"
description = "Wrap rsync binary with a python interface and a nice CLI."
authors = ["dmwyatt <dustin.wyatt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^1.1.1"
humanfriendly = "^8.2"
rsyncwrap = "^0.1.1"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
